# vaultash

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
migration/: .gitignore  Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20251206_145934_add_services_table.rs
src/: lib.rs  main.rs
src/api/: mod.rs  server.rs
src/api/handlers/: aws_handler.rs  mod.rs  password_handlers.rs  service_handler.rs  user_handler  vault_handler.rs
src/api/routes/: mod.rs  service_routes.rs  vault_routes.rs
src/db/: conn.rs  connection.rs  mod.rs
src/models/: mod.rs
src/models/dtos/: service.rs  vault.rs
src/models/entities/: mod.rs  service.rs  vault.rs
src/services/: password_service.rs
src/utils/: index.rs  mod.rs  multipart.rs
