[package]
name = "vaultash"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["multipart"] }
chrono = "0.4.42"
dotenvy = "0.15.7"
passwords = "3.1.16"
sea-orm = { version = "2.0.0-rc.20", features = ["sqlx-postgres"] }
sea-orm-migration = "2.0.0-rc.20"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
uuid = {version = "1.19.0", features = ["v4"]}
migration = { path = "./migration" }
serde_json = "1.0.145"
serde = "1.0.228"
once_cell = "1.21.3"
tower-http = { version = "0.5", features = ["cors", "limit", "set-header"] }
http = "1.4.0"
multer = "3.1.0"
futures = "0.3.31"
bytes = "1.11.0"
futures-util = "0.3.31"
s3-simple = "0.7.0"
thiserror = "1.0.59"
mime = "0.3.17"
mime_guess = "2.0.4"
